Changelog for Miosix np embedded OS

v1.56
- Added Priority class, so that different schedulers can redefine what priority
  means. Changed public interface of Thread class accordingly.
- Started implementing the EDF scheduler, defined three new member functions
  of the Thread class to be able to manage thread deadlines.
- Added Thread::sleepUntil() to make periodic sleeping more accurate.
  Also added a test for it in the testsuite.
- Changed data type for kernel tick from unsigned long long to long long.
  This also required to change the return value of getTick()
- Added files edf_scheduler.h and edf_scheduler.cpp
- Fixed bug in control scheduler: the outer regulator continued increasing
  the burst correction even if the set point could not be attained because of
  saturation of all inner integral regulators. This fix improves regulator
  performance when many threads are blocked.
- Updated openocd config files so that they work with newer releases of
  openocd. Note that this drops compatibility with openocd v0.1.0
- Fixed compiler scripts so that they work on Fedora too.
- Transitioned to git.
- Added the miosix/config/alt-configs directory to store some interesting
  alternative possible configurations.
- Malloc always allocates 4KB sectors that are aligned to 4KB boundaries.
  The linker script on the stm32 architecture has been modified so that the
  main stack (the one used for interrupt handling) is at the beginning of ram
  and not at the end. This will allow malloc to allocate till the ram upper
  limit and not waste the last 4KB block. Unfortunately it's not possible to
  do the same on the lpc2000 because upper 32bytes of ram are used for
  programming the flash memory.
- Changed default value for WITH_STDIN_BUFFER. By default stdin is now buffered.
- As part of a cleanup of linker scripts, some symbols such as _stack_top
  on the stm32 port have been removed.
- Removed filling of stack with a watermark value at boot, on both stm32 and